添加个人主页

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>张泾平的个人主页</title>
+    <title>张泾平OlderPing的个人主页</title>
     <style>
         body { font-family: Arial, sans-serif; max-width: 800px; margin: 0 auto; padding: 20px; }
         .header { text-align: center; border-bottom: 2px solid #eee; padding-bottom: 20px; }
@@ -12,29 +12,29 @@
 <body>
     <div class="header">
         <h1>张泾平</h1>
-        <p>热情 · 专业 · 创新</p>
+        <p>灰常热情 · 相当不专业 · 机具创新精神</p>
     </div>
 
     <div class="section">
         <h2>📌 关于我</h2>
         <p>这里写你的个人简介，比如：</p>
         <ul>
-            <li>从事领域/专业方向</li>
-            <li>工作经验/学习经历</li>
-            <li>个人优势或成就</li>
+            <li>从事化学领域/分析检测方向</li>
+            <li>目前没得工作经验/学习经历较少</li>
+            <li>曾是一名靓仔</li>
         </ul>
     </div>
 
     <div class="section">
-        <h2>🎓 教育背景</h2>
-        <p>XX大学 · 计算机科学 · 2018-2022</p>
+        <h2>🎓 我受过的教育</h2>
+        <p>安康学院 · 应用化学 · 2019-2023</p>
     </div>
 
     <div class="section">
-        <h2>📞 联系我</h2>
+        <h2>📞 你想联系我吗</h2>
         <ul>
-            <li>邮箱：yourname@example.com</li>
-            <li>微信：YourWeChatID</li>
+            <li>邮箱：2672900270@qq.com</li>
+            <li>微信：ZJP_Polaris</li>
             <li>LinkedIn：<a href="#">个人主页链接</a></li>
         </ul>
     </div>
